fix: fixed dropdown color dark mode and scroll bar

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body {
 
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
